--- a/index.html
+++ b/index.html
@@ -10,28 +10,27 @@
 	</header>
 
 	<div class="score-board">
-		<div class="badge" id="user-label">user</div>
-		<div class="badge" id="computer-label">comp</div>
+		<div class="badge" id="user-label">YOU</div>
+		<div class="badge" id="computer-label">CPU</div>
 		<span id="user-score">0</span>:<span id="computer-score">0</span>
 	</div>
 
 	<div class="result">
-		<p> Paper covers rock. You win!</p>
+		<p> Make your move to play.</p>
 	</div>
 
 	<div class="choices">
 		<div class="choice" id="r">
-			<img src="rock.png" alt="" height="50px" width="50px">
+			<img src="rock2.png" alt="" height="50px" width="50px">
 		</div>
 		<div class="choice" id="p">
-			<img src="paper1.png" alt="" height="50px" width="50px">
+			<img src="paper2.png" alt="" height="50px" width="50px">
 		</div>
 		<div class="choice" id="s">
-			<img src="scissor1.png" alt="" height="50px" width="50px">
+			<img src="scissor2.jpeg" alt="" height="50px" width="50px">
 		</div>
 	</div>
 
-	<p id="message"> Make your move.</p>
 	
 <script type="text/javascript" src="app.js"></script>
 </body>
